feat: update index file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Text</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium cum expedita laboriosam nihil repudiandae reprehenderit aut exercitationem suscipit quia ut quos porro iure, harum repellat? Cupiditate corrupti unde facere architecto!</p>
+    <ul>
+        <li>text</li>
+        <li>text</li>
+        <li>text</li>
+    </ul>
 </body>
 </html>
